latest changes and updates made

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/amazon-footer.css">
 </head>
-<body class="no-scroll">
+<body>
     <!--Header of amazon-->
     <div class="header">
         <div class="header-first-section">
@@ -73,6 +73,8 @@
         <div class="products-grid">
         </div>
     </div>
+
+    <!--Footer-->
     <div class="footer">
             <button onclick="document.location='#'" class="backToTop">Back to top</button>
         <div class="sections">
